switch fix on safari

--- a/sass/components/_switch.scss
+++ b/sass/components/_switch.scss
@@ -40,7 +40,7 @@
   background-position: left center;
   background-repeat: no-repeat;
   background-size: var(--switch-size) var(--switch-size);
-  transition: background .2s;
+  transition: background-position .2s;
 }
 
 
